--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "blockchain.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "start": "nodemon --watch . -e js api.js"
   },
   "repository": {
     "type": "git",
@@ -17,14 +18,15 @@
   },
   "homepage": "https://github.com/vvakar/my-blockchain#readme",
   "dependencies": {
-    "sha256": "^0.2.0"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "nodemon": "^1.19.4",
+    "sha256": "^0.2.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "mocha": "^6.2.2"
-  },
-  "scripts": {
-    "test": "mocha"
   }
 }
