--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/vvakar/my-blockchain#readme",
   "dependencies": {
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^1.19.4",
